--- a/index.html
+++ b/index.html
@@ -3,11 +3,61 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="./main.js" defer></script>
     <title>Countdown timer</title>
   </head>
   <body>
-    <div class="wrapper"></div>
+    <div class="wrapper section-center">
+      <article class="gift-img">
+        <img src="./gift.jpeg" alt="iphone" />
+      </article>
+
+      <article class="gift-info">
+        <h3>old iphone giveaway</h3>
+        <h4 class="giveaway">giveaway ends on Sunday, 24 April 2020, 8:00am</h4>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Reprehenderit molestiae cum libero atque ut voluptate qui consectetur
+          aliquid incidunt voluptatem quos, dolore, non commodi quaerat aliquam
+          eligendi, quisquam totam blanditiis.
+        </p>
+        <div class="deadline">
+          <div class="deadline-format">
+            <div>
+              <h4 class="days">34</h4>
+              <span>days</span>
+            </div>
+          </div>
+
+          <div class="deadline-format">
+            <div>
+              <h4 class="hourse">34</h4>
+              <span>hours</span>
+            </div>
+          </div>
+
+          <div class="deadline-format">
+            <div>
+              <h4 class="minutes">34</h4>
+              <span>mins</span>
+            </div>
+          </div>
+
+          <div class="deadline-format">
+            <div>
+              <h4 class="seconds">34</h4>
+              <span>secs</span>
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
   </body>
 </html>
